# rust_itertools

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
python/rust_itertools/: __init__.py  _rust_itertools.pyi
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
src/: lib.rs
src/rust_itertools/: __init__.py
tests/: test_combinatorics.py  test_derangements.py  tests.py
