[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "rust_itertools"
authors = [
  { name="Bert de Bruijn", email="lpdebruijn@gmail.com" },
]
description = "Run Rusts itertools and more in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "pytest>=8.3.4",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.urls]
Homepage = "https://gitlab.com/bert.debruijn/rust_itertools"
Issues = "https://gitlab.com/bert.debruijn/rust_itertools/-/issues"

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "_rust_itertools"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.
path = "Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted
